--- a/main.ipynb
+++ b/main.ipynb
@@ -13,10 +13,17 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "from pprint import pprint\n",
     "import tensorflow as tf\n",
     "import tensorflow.contrib.slim as slim\n",
+    "\n",
     "import vgg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Input image dimensions"
    ]
   },
   {
@@ -33,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up input node and feature extractor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -40,14 +54,20 @@
    },
    "outputs": [],
    "source": [
-    "# The input to the graph\n",
-    "input_var_0 = np.random.rand(1, height, width, channels)\n",
-    "input_var = tf.Variable(input_var_0, dtype=tf.float32, name='input_var')\n",
+    "# The input node to the graph\n",
+    "input_var_initial_value = np.random.rand(1, height, width, channels)\n",
+    "input_var = tf.Variable(input_var_initial_value, dtype=tf.float32, name='input_var')\n",
     "\n",
     "# Load the vgg model\n",
     "with slim.arg_scope(vgg.vgg_arg_scope()):\n",
-    "    logits, end_points = vgg.vgg_19(input_var, num_classes=1000, is_training=False)\n",
-    "    #predictions = end_points['vgg_19/conv1/conv1_2']"
+    "    logits, end_points = vgg.vgg_19(input_var, num_classes=1000, is_training=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up restoring feature extractor weights"
    ]
   },
   {
@@ -66,6 +86,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load real image and create to-be optimised image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -74,7 +101,7 @@
    "outputs": [],
    "source": [
     "# Construct the real image tensor\n",
-    "# And the operation which assigns it to input_var\n",
+    "# And the graph operation which assigns it to input_var\n",
     "real_image = cv2.imread('./coastal_scene.jpg')\n",
     "real_image = cv2.resize(real_image, (height, width))\n",
     "real_image = cv2.cvtColor(real_image, cv2.COLOR_BGR2RGB)\n",
@@ -85,7 +112,7 @@
     "assign_real_image = tf.assign(input_var, real_image_tensor, name='assign_real_image')\n",
     "\n",
     "# Construct the white noise tensor\n",
-    "# And the operation which assigns it to input_var\n",
+    "# And the graph operation which assigns it to input_var\n",
     "white_noise = np.random.rand(height, width, channels) * 255.\n",
     "white_noise_batch = np.expand_dims(white_noise, axis=0)\n",
     "white_noise_batch = np.asarray(white_noise_batch, dtype=np.float32)\n",
@@ -95,16 +122,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up remaining graph nodes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Choose which representation will be used to\n",
+    "# reconstruct the original image\n",
+    "# TODO: This should be a parameter higher up in the code\n",
     "predictions = end_points['vgg_19/conv1/conv1_1']\n",
-    "\n",
     "batch_size_res, height_res, width_res, channels_res = np.shape(predictions)\n",
     "\n",
     "# This placeholder will hold the response from the layer we are interested in\n",
@@ -113,91 +148,124 @@
     "                                  shape=[batch_size_res, height_res, width_res, channels_res],\n",
     "                                 name='desired_response')\n",
     "\n",
+    "# Loss and optimizer\n",
     "loss = tf.losses.mean_squared_error(labels=desired_response, predictions=predictions)\n",
     "optimizer = tf.train.AdamOptimizer(1e-1)\n",
     "train_op = optimizer.minimize(loss, var_list=[input_var])\n",
     "\n",
+    "# Tensorboard summaries\n",
     "loss_summary = tf.summary.scalar('loss', loss)\n",
     "image_summary = tf.summary.image('image', input_var)\n",
     "merged_summary = tf.summary.merge_all()\n",
     "\n",
-    "\n",
+    "# Initializers\n",
     "init_op = tf.group(tf.global_variables_initializer(), tf.local_variables_initializer(),\n",
-    "                  name='initialize_all')\n",
-    "\n",
+    "                  name='initialize_all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper function for displaying images "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def convert_to_proper(initial_image):\n",
+    "    \"\"\"\n",
+    "    Convert an image from tf node format to format that is \n",
+    "    suitable for plt displaying.\n",
+    "    \n",
+    "    This involves ensuring the image is 3D (removing the batch dimension),\n",
+    "    clipping the image to be between 0 and 255, rounding floats to int, and \n",
+    "    setting the array type to be integers. \n",
+    "    \n",
+    "    Arguments:\n",
+    "        initial_image: The original image from the node\n",
+    "    Returns:\n",
+    "        converted_image: Image to be shown by plt\n",
+    "    \"\"\"\n",
+    "    if np.ndim(initial_image) == 4:\n",
+    "        initial_image = np.squeeze(initial_image, axis=0)\n",
+    "    \n",
+    "    image_clipped = np.clip(initial_image, 0, 255)\n",
+    "    image_rounded = np.rint(image_clipped)\n",
+    "    converted_image = np.asarray(image_rounded, dtype=np.uint8)\n",
+    "    \n",
+    "    return converted_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "with tf.Session() as sess:\n",
     "    \n",
+    "    # Initialize all variables and then\n",
+    "    # restore weights for feature extractor\n",
     "    sess.run(init_op)\n",
     "    saver.restore(sess, './vgg_19.ckpt')\n",
     "    \n",
+    "    # Set up summary writer for tensorboard\n",
     "    train_writer = tf.summary.FileWriter('./train', sess.graph)\n",
     "        \n",
     "    # Using the real image, get the response of the chosen layer\n",
     "    assign_real_image.eval()\n",
-    "#     input_var_ = input_var.eval()\n",
-    "#     input_var_ = np.squeeze(input_var_, axis=0)\n",
-    "#     cv2.imwrite('real.jpg', input_var_)\n",
-    "    \n",
     "    desired_response_ = predictions.eval()\n",
-    "#     print(desired_response_)\n",
     "    \n",
     "    # Assign the white noise to the image\n",
     "    assign_white_noise.eval()\n",
-    "    input_var_ = input_var.eval()\n",
-    "    input_var_0 = np.squeeze(input_var_, axis=0)\n",
-    "    input_var_int = np.asarray(input_var_0, dtype=np.uint8)\n",
     "    \n",
-    "    plt.figure()\n",
-    "    plt.imshow(input_var_int)\n",
-    "    plt.title('initial')\n",
-    "    plt.savefig('./debug/initial_plt.jpg')\n",
-    "    \n",
-    "    cv2.imwrite('./debug/initial.jpg', input_var_int)\n",
-    "    \n",
-    "    #cv2.imwrite('white.jpg', input_var_)\n",
-    "    \n",
-    "    current_response_ = predictions.eval()\n",
-    "#     print(current_response_)\n",
-    "    loss_0 = 0\n",
     "    # Begin training\n",
     "    for i in range(5000):\n",
     "        input_var_, summary, loss_, _ = sess.run([input_var, merged_summary, loss, train_op], \n",
     "                                     feed_dict={desired_response:desired_response_})\n",
     "        train_writer.add_summary(summary, i)\n",
+    "        \n",
     "        if i%100==0:\n",
     "            print('loss: {}'.format(loss_))\n",
     "            \n",
     "            input_var_ = input_var.eval()\n",
     "            input_var_ = np.squeeze(input_var_, axis=0)\n",
     "            plt.figure()\n",
-    "            input_var_int = np.asarray(input_var_, dtype=np.uint8)\n",
+    "            input_var_int = convert_to_proper(input_var_)\n",
     "            plt.imshow(input_var_int)\n",
     "            plt.title(str(i))\n",
-    "            img_name = './debug/img_plt_{}.jpg'.format(str(i))\n",
+    "            img_name = './debug/img_plt_{}.png'.format(str(i))\n",
     "            plt.savefig(img_name)\n",
     "            \n",
-    "            img_name = './debug/img_{}.jpg'.format(str(i))\n",
-    "            cv2.imwrite(img_name, input_var_int)\n",
+    "            input_var_colour = cv2.cvtColor(input_var_, cv2.COLOR_BGR2RGB)\n",
+    "            img_name = './debug/img_{}.png'.format(str(i))\n",
+    "            cv2.imwrite(img_name, input_var_colour)\n",
     "    \n",
     "    input_var_ = input_var.eval()\n",
     "    input_var_ = np.squeeze(input_var_, axis=0)\n",
-    "    input_var_int = np.asarray(input_var_, dtype=np.uint8)\n",
+    "    input_var_int = convert_to_proper(input_var_)\n",
     "    plt.figure()\n",
     "    plt.imshow(input_var_int)\n",
     "    plt.title('final')\n",
-    "    plt.savefig('./debug/final_plt.jpg')\n",
+    "    plt.savefig('./debug/final_plt.png')\n",
     "    \n",
-    "    cv2.imwrite('./debug/final.jpg', input_var_int)\n",
-    "    \n",
-    "    final_diff = input_var_-input_var_int\n",
-    "    print('float')\n",
-    "    print(input_var_)\n",
-    "    print('int')\n",
-    "    print(input_var_int)\n",
-    "    print(np.sum(final_diff))\n",
-    "    \n",
-    "    \n",
-    "    "
+    "    input_var_colour = cv2.cvtColor(input_var_, cv2.COLOR_BGR2RGB)\n",
+    "    cv2.imwrite('./debug/final.png', input_var_colour)   "
    ]
   }
  ],
