Added explanation at the top

--- a/gotchas/plt_image_formatting.ipynb
+++ b/gotchas/plt_image_formatting.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A short snippet examining the required preprocessing before displaying an image with matplotlib.pyplot."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -37,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "# Simulate direct neural network input by casting to float\n",
+    "# Simulate neural network input by casting to float\n",
     "image_float = np.array(image, dtype=np.float32)"
    ]
   },
@@ -202,6 +209,10 @@
     "plt.figure()\n",
     "plt.imshow(corrected_image_float)\n",
     "\n",
+    "# This image looks slightly different as some\n",
+    "# there is noise was still added\n",
+    "# However, it isn't as obvious as before since the\n",
+    "# noise is capped to 255\n",
     "plt.figure()\n",
     "plt.imshow(corrected_image_invalid)"
    ]
