Updated output being stored in the gotcha notebooks

--- a/gotchas/cv2_extension_saving.ipynb
+++ b/gotchas/cv2_extension_saving.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Set up the original dummy image\n",
-    "dummy_image = np.random.rand(224,224,3)"
+    "dummy_image = np.random.rand(224,224,3) * 255"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -67,6 +67,30 @@
     "# Load the two saved images\n",
     "dummy_image_jpg = cv2.imread('dummy_image.jpg')\n",
     "dummy_image_png = cv2.imread('dummy_image.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[66.81956343 74.28169522 96.4623288 ]\n",
+      "[47 85 79]\n",
+      "[67 74 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examine some pixel values\n",
+    "print(dummy_image[0,0,0:10])\n",
+    "print(dummy_image_jpg[0,0,0:10])\n",
+    "print(dummy_image_png[0,0,0:10])"
    ]
   },
   {
