--- a/gotchas/wrong_input_type.ipynb
+++ b/gotchas/wrong_input_type.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Choose which input data type you want to experiment with, set to 0 or 1\n",
-    "data_type_choice = 0\n",
+    "data_type_choice = 1\n",
     "\n",
     "if data_type_choice == 0:\n",
     "    input_data_type = np.float32 # This will work\n",
@@ -44,9 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -74,20 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from ../vgg_19.ckpt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create saver object for restoring weights\n",
     "saver = tf.train.Saver()\n",
