Removed outputs from notebook before uploading

--- a/content_recs.ipynb
+++ b/content_recs.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "# Determines whether information is saved between runs\n",
     "# for tensorboard\n",
-    "reset_saves = False\n",
+    "reset_saves = True\n",
     "if reset_saves is True:\n",
     "    # Ensure tensorboard is not running when you try to delete\n",
     "    # this directory\n",
@@ -95,16 +95,16 @@
    "outputs": [],
    "source": [
     "# Layer being used to produce features\n",
-    "feature_layer = 'vgg_19/conv1/conv1_1'\n",
+    "feature_layer = 'vgg_19/conv2/conv2_2'\n",
     "\n",
     "# Learning rate for optimizer\n",
     "learning_rate = 1e-1\n",
     "\n",
     "# Number of training and validation step\n",
     "# In this instance, validation refers to when we would like to examine the \n",
-    "# currently optimized image and loss\n",
-    "training_steps = 5000\n",
-    "validation_steps = 100\n",
+    "# currently optimized image, save it, and loss\n",
+    "training_steps = 100000\n",
+    "validation_steps = 1000\n",
     "\n",
     "# Online debugging refers to images that will be displayed within the notebook \n",
     "# using plt\n",
@@ -132,6 +132,10 @@
     "height = 224\n",
     "width = 224\n",
     "channels = 3\n",
+    "\n",
+    "# Set the seeds to provide consistency between runs\n",
+    "np.random.seed(0)\n",
+    "tf.set_random_seed(0)\n",
     "\n",
     "# The input node to the graph\n",
     "# These values are what is required by vgg19 for height, width, channels\n",
@@ -353,7 +357,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -375,15 +380,16 @@
     "    \n",
     "    # Begin training\n",
     "    for i in range(training_steps):\n",
-    "        summary, _ = sess.run([merged_summary, train_op], \n",
+    "        summary, _ = sess.run([loss_summary, train_op], \n",
     "                                     feed_dict={desired_response:desired_response_})\n",
     "        train_writer.add_summary(summary, i)\n",
     "        \n",
     "        if i % validation_steps == 0:\n",
-    "            current_image, loss_ = sess.run([input_var, loss],\n",
+    "            summary, current_image, loss_ = sess.run([image_summary, input_var, loss],\n",
     "                                           feed_dict={desired_response:desired_response_})\n",
+    "            train_writer.add_summary(summary, i)\n",
     "            \n",
-    "            print('Loss: {}'.format(loss_))\n",
+    "            print('Step: {}, Loss: {}'.format(i, loss_))\n",
     "            \n",
     "            if debug_online is True:\n",
     "                display_image(current_image, i)\n",
@@ -391,6 +397,7 @@
     "                save_image(current_image, i)  \n",
     "                \n",
     "    # Display and save the final image\n",
+    "    current_image = input_var.eval()\n",
     "    display_image(current_image, 'Final')\n",
     "    save_image(current_image, 'Final')"
    ]
