--- a/style_recs.ipynb
+++ b/style_recs.ipynb
@@ -95,10 +95,22 @@
    },
    "outputs": [],
    "source": [
+    "# Dimensions desired for image, channels must be kept as 3\n",
+    "height = 512\n",
+    "width = 512\n",
+    "channels = 3\n",
+    "\n",
+    "# Set the seeds to provide consistency between runs\n",
+    "# Can also comment out for variability between runs\n",
+    "np.random.seed(2)\n",
+    "tf.set_random_seed(2)\n",
+    "\n",
     "# Layer being used to produce features\n",
     "feature_layer_list = ['vgg_19/conv1/conv1_1', 'vgg_19/conv2/conv2_1', 'vgg_19/conv3/conv3_1',\n",
     "    'vgg_19/conv4/conv4_1', 'vgg_19/conv5/conv5_1']\n",
-    "chosen_depth = 1\n",
+    "\n",
+    "# Chosen depth corresponds to how many feature layers you want to use\n",
+    "chosen_depth = 4\n",
     "\n",
     "# Learning rate for optimizer\n",
     "learning_rate = 1e-1\n",
@@ -206,15 +218,6 @@
    },
    "outputs": [],
    "source": [
-    "# Dimensions are required by vgg19\n",
-    "height = 512\n",
-    "width = 512\n",
-    "channels = 3\n",
-    "\n",
-    "# Set the seeds to provide consistency between runs\n",
-    "np.random.seed(0)\n",
-    "tf.set_random_seed(0)\n",
-    "\n",
     "# The input node to the graph\n",
     "# These values are what is required by vgg19 for height, width, channels\n",
     "input_var_initial_value = np.random.rand(1, height, width, channels)\n",
@@ -222,7 +225,7 @@
     "\n",
     "# Load the vgg model\n",
     "with slim.arg_scope(vgg.vgg_arg_scope()):\n",
-    "    logits, end_points = vgg.vgg_19(input_var, num_classes=1000, is_training=False, spatial_squeeze=False)"
+    "    end_points = vgg.vgg_19_conv(input_var)"
    ]
   },
   {
@@ -332,6 +335,7 @@
     "                  name='initialize_all')\n",
     "\n",
     "with tf.Session() as sess:\n",
+    "    # Initialize new variables and then restore vgg_19 variables\n",
     "    sess.run(init_op)\n",
     "    saver.restore(sess, checkpoint_path)\n",
     "    \n",
@@ -425,7 +429,7 @@
     "    # Set up summary writer for tensorboard, saving graph as well\n",
     "    train_writer = tf.summary.FileWriter(tensorboard_dir, sess.graph)\n",
     "    \n",
-    "    # Assign the white noise to the image\n",
+    "    # Assign the white noise to the variable being optimized\n",
     "    assign_white_noise.eval()\n",
     "    \n",
     "    # Begin training\n",
@@ -436,7 +440,6 @@
     "        if i % validation_steps == 0:\n",
     "            image_summary_, current_image, loss_ = sess.run(\n",
     "                [image_summary, input_var, loss])\n",
-    "            \n",
     "            \n",
     "            train_writer.add_summary(image_summary_, i)\n",
     "            \n",
