--- a/style_recs.ipynb
+++ b/style_recs.ipynb
@@ -96,8 +96,8 @@
    "outputs": [],
    "source": [
     "# Dimensions desired for image, channels must be kept as 3\n",
-    "height = 512\n",
-    "width = 512\n",
+    "height = 224\n",
+    "width = 224\n",
     "channels = 3\n",
     "\n",
     "# Set the seeds to provide consistency between runs\n",
@@ -110,7 +110,7 @@
     "    'vgg_19/conv4/conv4_1', 'vgg_19/conv5/conv5_1']\n",
     "\n",
     "# Chosen depth corresponds to how many feature layers you want to use\n",
-    "chosen_depth = 4\n",
+    "chosen_depth = 2\n",
     "\n",
     "# Learning rate for optimizer\n",
     "learning_rate = 1e-1\n",
@@ -265,7 +265,7 @@
    },
    "outputs": [],
    "source": [
-    "# Construct the real image tensor\n",
+    "# Construct the style image tensor\n",
     "# And the graph operation which assigns it to input_var\n",
     "real_image = plt.imread(real_image_path)\n",
     "real_image = cv2.resize(real_image, (height, width))\n",
