Update paths to images and clear notebook outputs

--- a/content_recs.ipynb
+++ b/content_recs.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Path to image we are extracting content from\n",
-    "real_image_path = './coastal_scene.jpg'\n",
+    "real_image_path = './images/coastal_scene.jpg'\n",
     "\n",
     "# Path to vgg19 checkpoint, must be downloaded separately\n",
     "checkpoint_path = './vgg_19.ckpt'\n",
