--- a/style_recs.ipynb
+++ b/style_recs.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# Path to image we are extracting content from\n",
-    "real_image_path = './starry_night.jpg'\n",
+    "real_image_path = './images/starry_night.jpg'\n",
     "\n",
     "# Path to vgg19 checkpoint, must be downloaded separately\n",
     "checkpoint_path = './vgg_19.ckpt'\n",
