--- a/style_transfer.ipynb
+++ b/style_transfer.ipynb
@@ -54,8 +54,8 @@
    "outputs": [],
    "source": [
     "# Path to images we are extracting content and style from\n",
-    "content_image_path = './perth_skyline.jpg'\n",
-    "style_image_path = './starry_night.jpg'\n",
+    "content_image_path = './images/perth_skyline.jpg'\n",
+    "style_image_path = './images/starry_night.jpg'\n",
     "\n",
     "# Path to vgg19 checkpoint, must be downloaded separately\n",
     "checkpoint_path = './vgg_19.ckpt'\n",
