--- a/style_transfer.ipynb
+++ b/style_transfer.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Path to images we are extracting content and style from\n",
-    "content_image_path = './images/perth_skyline.jpg'\n",
+    "content_image_path = './images/coastal_scene.jpg'\n",
     "style_image_path = './images/starry_night.jpg'\n",
     "\n",
     "# Path to vgg19 checkpoint, must be downloaded separately\n",
@@ -108,18 +108,18 @@
     "tf.set_random_seed(0)\n",
     "\n",
     "# Layer being for content component\n",
-    "content_layer = 'vgg_19/conv4/conv4_2'\n",
+    "content_layer = 'vgg_19/conv2/conv2_2'\n",
     "\n",
     "style_list = ['vgg_19/conv1/conv1_1', 'vgg_19/conv2/conv2_1', 'vgg_19/conv3/conv3_1',\n",
     "    'vgg_19/conv4/conv4_1', 'vgg_19/conv5/conv5_1']\n",
     "\n",
     "# Chosen depth corresponds to how many feature layers you want to use\n",
     "# for the style component\n",
-    "chosen_depth = 5\n",
+    "chosen_depth = 2\n",
     "\n",
     "# Weights for each loss component\n",
     "content_weight = 1.0\n",
-    "style_weight = content_weight/8e-4\n",
+    "style_weight = content_weight * 1e2\n",
     "\n",
     "# Learning rate for optimizer\n",
     "learning_rate = 1e-1\n",
@@ -195,7 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
